--- a/webserved_dir/index.html
+++ b/webserved_dir/index.html
@@ -14,6 +14,15 @@
         }
     }
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.52.2/min/vs/loader.min.js"></script>
+    <script>
+        globalThis.o_promise__monaco = new Promise(function(f_resolve) {
+            require.config({ paths: { vs: 'https://cdn.jsdelivr.net/npm/monaco-editor@0.52.2/min/vs' } });
+            require(['vs/editor/editor.main'], function(o_monaco) {
+                f_resolve(o_monaco);
+            });
+        });
+    </script>
 </head>
 <body>
     <div id="app"></div>
