--- a/webserved_dir/index.html
+++ b/webserved_dir/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Media Analyser</title>
+    <title>App</title>
     <link rel="stylesheet" href="index.css">
     <script type="importmap">
     {
@@ -13,15 +13,6 @@
             "@vue/devtools-api": "https://unpkg.com/@vue/devtools-api@6/lib/esm/index.js"
         }
     }
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.52.2/min/vs/loader.min.js"></script>
-    <script>
-        globalThis.o_promise__monaco = new Promise(function(f_resolve) {
-            require.config({ paths: { vs: 'https://cdn.jsdelivr.net/npm/monaco-editor@0.52.2/min/vs' } });
-            require(['vs/editor/editor.main'], function(o_monaco) {
-                f_resolve(o_monaco);
-            });
-        });
     </script>
 </head>
 <body>
